SONAR-18219 Add telemetry fields for CaYC